# mambler

./: README.md  format.txt  long.amb  long.md  mambler.py  output.amb  pyproject.toml
src/mambler/: __init__.py  __main__.py
